--- a/specs/038-test-coverage-85/spec.yaml
+++ b/specs/038-test-coverage-85/spec.yaml
@@ -1,7 +1,8 @@
 feature:
     branch: "038-test-coverage-85"
     created: "2025-12-17"
-    status: "InProgress"
+    status: "Completed"
+    completed_at: 2025-12-17T21:44:24Z
     input: "improve coverage for all go modules 85% minimum - critical code should be 90%"
 user_stories:
     - id: "US-001"
