feat(testutil): add NewTestOrchestratorWithSpecName for custom spec name in tests feat(mock-claude.sh): implement artifact generation for spec.yaml, plan.yaml, and tasks.yaml based on environment variables test(workflow): add tests for ExecuteSpecify, ExecutePlan, ExecuteTasks, and ExecuteImplement methods to validate artifact creation style(tasks.yaml): update task status from Pending to InProgress for better tracking

--- a/specs/040-workflow-mock-coverage/tasks.yaml
+++ b/specs/040-workflow-mock-coverage/tasks.yaml
@@ -76,7 +76,7 @@ phases:
       tasks:
         - id: "T005"
           title: "Add TestExecuteSpecify_Success in internal/workflow/workflow_test.go"
-          status: "Pending"
+          status: "InProgress"
           type: "test"
           parallel: false
           story_id: "US-001"
