--- a/specs/041-orchestrator-schema-validation/spec.yaml
+++ b/specs/041-orchestrator-schema-validation/spec.yaml
@@ -196,6 +196,10 @@ edge_cases:
     expected_behavior: "Final error includes accumulated validation errors and exits with appropriate code"
   - scenario: "tasks.yaml references non-existent task IDs in dependencies"
     expected_behavior: "Dependency validation catches invalid references and includes them in error message"
+  - scenario: "Retry with no original $ARGUMENTS (empty initial input)"
+    expected_behavior: "Retry context is injected as the sole content of $ARGUMENTS; template handles gracefully"
+  - scenario: "First attempt (not a retry)"
+    expected_behavior: "$ARGUMENTS contains only user input with no retry prefix; templates process normally"
 
 assumptions:
   - "Existing artifact validators (NewSpecValidator, NewPlanValidator, NewTasksValidator) are fully implemented and tested"
@@ -214,12 +218,12 @@ out_of_scope:
   - "Modifying schema definitions for spec.yaml, plan.yaml, or tasks.yaml"
   - "Adding new validation rules beyond what existing validators check"
   - "Implementing validation for other artifact types (checklist.yaml, constitution.yaml, etc.)"
-  - "Modifying Claude's slash command behavior or templates (only retry prompt injection)"
+  - "Adding new template parameters beyond existing $ARGUMENTS"
   - "Performance optimization of existing validators"
   - "Interactive/real-time validation during Claude generation"
 
 _meta:
-  version: "1.0.0"
+  version: "1.1.0"
   generator: "autospec"
   generator_version: "autospec dev"
   created: "2025-12-18T03:02:50Z"
